# MemoTrie

./: .gitignore  COPYING  Makefile  MemoTrie.cabal  README.md  changes.tw  stack.yaml  wikipage.tw
examples/: Generic.hs
src/Data/: MemoTrie.hs
src/Data/MemoTrie/: Extra.hs
