Name:                MemoTrie
Version:             0.6.2
Cabal-Version:       >= 1.6
Synopsis:            Trie-based memo functions
Category:            Data
Description:
  MemoTrie provides a basis for memoized functions over some domains,
  using tries.  It's based on ideas from Ralf Hinze and code from
  Spencer Janssen.
  .
  Project wiki page: <http://haskell.org/haskellwiki/MemoTrie>
  .
  &#169; 2008-2012 by Conal Elliott; BSD3 license.
Homepage:            http://haskell.org/haskellwiki/MemoTrie
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Copyright:           (c) 2008-2012 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/MemoTrie.git

Library
  hs-Source-Dirs:      src
  Extensions:          
  Build-Depends:       base < 5, void
  Exposed-Modules:     
                     Data.MemoTrie

 ghc-prof-options:    -prof -auto-all 
