Name:                MemoTrie
Version:             0.6.5
Cabal-Version:       >= 1.10
Synopsis:            Trie-based memo functions
Category:            Data
Description:
  MemoTrie provides a basis for memoized functions over some domains,
  using tries.  It's based on ideas from Ralf Hinze and code from
  Spencer Janssen. Generic support thanks to Sam Boosalis.
  .
  Project wiki page: <http://haskell.org/haskellwiki/MemoTrie>
  .
  &#169; 2008-2015 by Conal Elliott; BSD3 license.
Homepage:            https://github.com/conal/MemoTrie
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Copyright:           (c) 2008-2015 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/MemoTrie.git

Flag examples
  Description: "examples"
  Default:     False
  Manual:      True

Library
  hs-Source-Dirs:      src

  if impl(ghc >= 7.10.0)
     Build-Depends: base >=4.8.0.0 && <5
                  , newtype-generics >= 0.4
  else
     Build-Depends: base <4.8.0.0, void

  Exposed-Modules:     
                     Data.MemoTrie
  Other-Modules:     

  default-language: Haskell2010

executable generic 
  if !flag(examples)
    buildable:         False
  main-is:             Generic.hs
  ghc-options:         -Wall
  default-language: Haskell2010
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, MemoTrie

