Name:                MemoTrie
Version:             0.6.10
Cabal-Version:       >= 1.10
Synopsis:            Trie-based memo functions
Category:            Data
Description:
  MemoTrie provides a basis for memoized functions over some domains,
  using tries.  It's based on ideas from Ralf Hinze and code from
  Spencer Janssen. Generic support thanks to Sam Boosalis.
  .
  Project wiki page: <http://haskell.org/haskellwiki/MemoTrie>
  .
  &#199; 2008-2019 by Conal Elliott; BSD3 license.
Homepage:            https://github.com/conal/MemoTrie
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Copyright:           (c) 2008-2019 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/MemoTrie.git

Flag examples
  Description: "examples"
  Default:     False
  Manual:      True

Library
  hs-Source-Dirs:      src

  if impl(ghc >= 7.10.0)
     Build-Depends: base >=4.8.0.0 && <5, newtype-generics >= 0.5.3
  else
     Build-Depends: base <4.8.0.0, void, newtype-generics >= 0.5.3

  Exposed-Modules:     
                     Data.MemoTrie
  Other-Modules:     

  default-language: Haskell2010

executable generic 
  if !flag(examples)
    buildable:         False
  main-is:             Generic.hs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, MemoTrie

